# FairEmail

./: .gitignore  .gitmodules  .o{htm}o.  ATTRIBUTION.md  CHANGELOG.md  FAQ.md  FAQ.yaml  FUNDING.yml  ISSUE_TEMPLATE.md  PLAYSTORE.txt  PRIVACY.md  PULL_REQUEST_TEMPLATE.md  README.md  Readme.md  SECURITY.md  SETUP.md  build.gradle  colorpicker.patch  crowdin.yml  data_safety_export.csv  fdroid.txt  gradle.properties  index.html  livedata.patch  privacy.css  privacy.html  recyclerview-selection.patch  room.patch  settings.gradle
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/schemas/eu.faircode.email.DB/: 1.json  10.json  100.json  101.json  102.json  103.json  104.json  105.json  106.json  107.json  108.json  109.json  11.json  110.json  111.json  112.json  113.json  114.json  115.json  116.json  117.json  118.json  119.json  12.json  120.json  121.json  122.json  123.json  124.json  125.json  126.json  127.json  128.json  129.json  13.json  130.json  131.json  132.json  133.json  134.json  (+261 more)
app/src/amazon/: AndroidManifest.xml
app/src/debug/: AndroidManifest.xml
app/src/debug/java/eu.faircode.email/: CoalMine.java
app/src/debug/res/drawable-v31/: ic_background_launcher.xml
app/src/debug/res/font/: montserrat.xml  opensans.xml
app/src/debug/res/layout-v31/: dialog_theme.xml
app/src/debug/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/debug/res/mipmap-anydpi-v31/: ic_launcher.xml  ic_launcher_round.xml
app/src/debug/res/mipmap-anydpi-v33/: ic_launcher.xml
app/src/debug/res/values/: styles.xml
app/src/debug/res/values-v31/: styles.xml
app/src/debug/res/xml/: shortcuts.xml
app/src/debug/resources/: tinylog-dev.properties
app/src/fdroid/: AndroidManifest.xml
app/src/github/: AndroidManifest.xml
app/src/large/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml
app/src/main/assets/: ATTRIBUTION.md  CHANGELOG.md  DigiCert Verified Mark Root CA.pem  PRIVACY.md  SETUP-ar-rBH.md  SETUP-ar-rEG.md  SETUP-ar-rSA.md  SETUP-ar-rYE.md  SETUP-ar.md  SETUP-az-rAZ.md  SETUP-az.md  SETUP-be-rBY.md  SETUP-bg-rBG.md  SETUP-bg.md  SETUP-bn-rBD.md  SETUP-bn-rIN.md  SETUP-bs-rBA.md  SETUP-ca-rES.md  SETUP-ca.md  SETUP-cs-rCZ.md  SETUP-cs.md  SETUP-da-rDK.md  SETUP-da.md  SETUP-de-rAT.md  SETUP-de-rDE.md  SETUP-de.md  SETUP-el-rGR.md  SETUP-en-rGB.md  SETUP-es-ES.md  SETUP-es-rES.md  SETUP-et-rEE.md  SETUP-eu-rES.md  SETUP-eu.md  SETUP-fa-rIR.md  SETUP-fa.md  SETUP-fi-rFI.md  SETUP-fi.md  SETUP-fr-rCA.md  SETUP-fr-rFR.md  SETUP-fr.md  (+60 more)
app/src/main/assets/bip39/: de.txt  iw.txt  pl.txt  uk.txt
app/src/main/assets/schema.org/: emailmessage.html  flightreservation.html
app/src/main/assets/smime/: MozillaCA.pem  VV-Root-G02-CA.pem
app/src/main/assets/vmc/: entrust_vmc_specific.pem
app/src/main/java/biweekly/: Biweekly.java  ICalDataType.java  ICalVersion.java  ICalendar.java  Messages.java  ValidationWarning.java  ValidationWarnings.java  biweekly.license
app/src/main/java/com.sun.mail.imap.protocol/: IMAPSaslAuthenticator.java
app/src/main/java/com.sun.mail.smtp/: SMTPSaslAuthenticator.java
app/src/main/jni/: charset.cc  fairemail.cc
app/src/main/jni/compact_enc_det/: compact_enc_det.h  compact_enc_det_generated_tables.h
app/src/main/jni/util/: basictypes.h  string_util.h
app/src/main/res/anim/: activity_close_enter.xml  activity_close_exit.xml  activity_open_enter.xml  activity_open_exit.xml  bounce_left.xml  bounce_right.xml  bounce_top.xml  enter_from_bottom.xml  enter_from_left.xml  enter_from_right.xml  exit_to_left.xml  exit_to_right.xml  fade_in_fast.xml  leave_to_left.xml  leave_to_right.xml
app/src/main/res/color/: action_foreground.xml  background_warning.xml  bottomnav_foreground.xml  bw_textcolor.xml  bw_textcolor_inverse.xml
app/src/main/res/da/: PLAYSTORE.txt
app/src/main/res/de/: PLAYSTORE.txt
app/src/main/res/drawable/: abovebelow.xml  activatable_item_background_dark.xml  activatable_item_background_light.xml  attachment_disposition.xml  authenticated.xml  background_white.xml  badge.xml  baseline_account_box_24.xml  baseline_all_inbox_24.xml  baseline_all_inclusive_24.xml  baseline_archive_24.xml  baseline_attach_money_24.xml  baseline_attachment_24.xml  baseline_bookmark_24.xml  baseline_bookmarks_24.xml  baseline_broken_image_24.xml  baseline_bug_report_24.xml  baseline_call_made_24.xml  baseline_call_received_24.xml  baseline_close_24.xml  baseline_cloud_24.xml  baseline_cloud_download_24.xml  baseline_cloud_off_24.xml  baseline_cloud_queue_24.xml  baseline_create_new_folder_24.xml  baseline_delete_24.xml  baseline_dns_24.xml  baseline_drafts_24.xml  baseline_drag_handle_24.xml  baseline_edit_24.xml  baseline_event_24.xml  baseline_exit_to_app_24.xml  baseline_expand_hor_less_24.xml  baseline_expand_hor_more_24.xml  baseline_expand_less_24.xml  baseline_expand_more_24.xml  baseline_fast_forward_24.xml  baseline_feedback_24.xml  baseline_filter_list_24.xml  baseline_fingerprint_24.xml  (+483 more)
app/src/main/res/fi/: PLAYSTORE.txt
app/src/main/res/font/: arimo.xml  caladea.xml  cambo.xml  cousine.xml  fantasy.xml  lato.xml  montserrat.xml  opendyslexic.xml  (+2 more)
app/src/main/resources/: tinylog.properties
app/src/play/: AndroidManifest.xml
(+2951 files in other folders)
